adding koansys theme style

--- a/koansys/theme.conf
+++ b/koansys/theme.conf
@@ -1,6 +1,8 @@
 [theme]
-inherit = basic
-stylesheet = koansys.css
+inherit = none
+stylesheet = basic.css
+pygments_style = none
 
 [options]
-logo = koansyslogo.png
+nosidebar = false
+sidebarwidth = 230
